--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
             <h3 class="text-left subtitulo mt-3">Nuevo alumno</h3>
             <div class="card-contenedor mb-3">
                 <div class="card-body">
-                    <form action="/alumnos" method="POST" onsubmit="return validarFormulario()">
+                    <form action="/agregarAlumno" method="POST" onsubmit="return validarFormulario()">
                         <div class="row mb-3">
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Nombre <span class="campo-obligatorio">*</span></label>
