--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -154,7 +154,29 @@
                                         <input type="checkbox" name="materia[]" value="Literatura" {% if 'Literatura' in data.dia %}checked{% endif %}> Literatura
                                     </label>
                                 </div>
-                        </div>
+                                <script>
+                                    function validarFormulario() {
+                                        // Obtén todos los campos obligatorios
+                                        var camposObligatorios = document.querySelectorAll('[required]');
+                                        var todosCompletos = true;
+                                    
+                                        camposObligatorios.forEach(function(campo) {
+                                            if (campo.value.trim() === '') {
+                                                todosCompletos = false;
+                                            }
+                                        });
+                                    
+                                        if (!todosCompletos) {
+                                            // Si no todos los campos obligatorios están completos, muestra una alerta
+                                            alert('Por favor, completa todos los campos obligatorios.');
+                                            return false; // Evita que se envíe el formulario
+                                        }
+                                    
+                                        // Si todos los campos obligatorios están completos, el formulario se enviará
+                                        return true;
+                                    }
+                                    </script>
+                            </div>
                             <div class="col-md-3 col-sm-12">
                                 <div class="btn-container">
                                     <button type="button" class="btn-guardar" data-bs-toggle="modal" data-bs-target="#confirmarGuardar">Guardar alumno</button>
@@ -446,6 +468,5 @@
             });
         });
     });
-</script>
-
+</script> 
 </body>
